Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/badMethodCallType.deca
// Description:
//    Appel d'une méthode avec le mauvais nombre d'arguments
//
// Resultat: Ligne 20
//    ContextualError : Wrong type of parameter in method signature
//
// Historique:
//    Créé le 24/01/2018

class A{
      int x;

      void setX(int x){
      	  this.x = x;
      }
}

{
        A a = new A();
	println(a.setX(1.5));
}
		